[package]
name = "actix"
version = "0.1.0"
authors = ["finkrer <finkrer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0.0", features = ["openssl"] }
actix-files = "0.2.2"
actix-rt = "1.1.1"
openssl = { version = "0.10.30", features = ["v111"] }
yarte = "0.12.0"