[package]
name = "actix"
version = "0.1.0"
authors = ["finkrer <finkrer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.2.2"
actix-http = "1.0.1"
actix-rt = "1.1.1"
actix-web = "2.0.0"
either = "1.5.3"
regex = "1.3.9"